k8s/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  selector:
    app: spring-app
  ports:
    - port: 8080
      targetPort: 8080
