k8s/base/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-app
spec:
  to:
    kind: Service
    name: spring-app
  port:
    targetPort: 8080
  tls:
    termination: edge
